# goit-pythonweb-hw-10

./: .gitignore  Makefile  README.md  connect.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 05b133e7cac0_rename_user_field.py  d7cebe77233b_rename_user_field.py  fe3e4ff7a814_add_confirmed_field_to_user.py  ffbbc2b0bc37_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/api/const/: contacts.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email_service.py  users.py
src/services/templates/: verify_email.html
